# meshing

./: .gitignore  Cargo.toml  README.md
.github/workflows/: 2dtest.yml  lint.yml
benches/: mesh_benchmarks.rs
examples/: 2d_plot.rs  3d_plot.rs  pipeline_example.rs  simple_2d_triangulation.rs  simple_3d_tetrahedralization.rs  sphere_mesh_export.rs
src/: advancing_front.rs  delaunay_refinement.rs  error.rs  geometry.rs  geometry_3d.rs  lib.rs  marching_cubes.rs  model.rs  octree.rs  pipeline.rs  tetrahedron_utils.rs  triangle_utils.rs  voxel_mesh.rs  wasm.rs
src/export/: gltf.rs  gltf_quantized.rs  mod.rs  obj.rs  stl.rs  vtk.rs
src/model/: circle.rs  edge.rs  face.rs  point_2d.rs  point_3d.rs  sphere.rs  tetrahedron.rs  triangle.rs
